[tool.poetry]
name = "study-fastapi"
version = "0.1.0"
description = ""
authors = ["ktny <katsunori.t10@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.1"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
SQLAlchemy = "^1.4.40"
aiomysql = "^0.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
